<resources>
    <string name="app_name">Oh漫画</string>
    <string name="read">阅读</string>
    <string name="like">喜欢</string>
    <string name="comment">评论</string>

    <string name="username">账户</string>
    <string name="password">密码</string>
    <string name="verify">验证</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="not_login">未登录</string>

    <string name="brief">简介</string>
    <string name="chapter">章节</string>

    <string name="record">历史记录</string>


    <string name="first">已经是第一章了</string>
    <string name="last">已经是最后一章了</string>

</resources>
