<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UserFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvHead"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivHead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/mcvHead"
        app:layout_constraintStart_toEndOf="@id/mcvHead"
        android:layout_margin="@dimen/padding"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintTop_toBottomOf="@id/mcvHead" />

    <TextView
        android:id="@+id/tvUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/mcvHead"
        android:layout_margin="@dimen/padding"
        android:background="@drawable/shape_tag"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvNickName" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvUserId"
        app:layout_constraintStart_toEndOf="@id/tvUserId"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorTextHint" />


    <TextView
        android:id="@+id/tvLike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mcvHead"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvRead"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:text="0"/>

    <TextView
        android:id="@+id/tvRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mcvHead"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/tvLike"
        app:layout_constraintEnd_toStartOf="@id/tvComment"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:text="0"/>

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mcvHead"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/tvRead"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:text="0"/>

    <TextView
        android:id="@+id/tvLikeSub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvLike"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvRead"
        android:text="@string/like"/>

    <TextView
        android:id="@+id/tvReadSub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvRead"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/tvLike"
        app:layout_constraintEnd_toStartOf="@id/tvComment"
        android:text="@string/read"/>

    <TextView
        android:id="@+id/tvCommentSub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvComment"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/tvRead"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/comment"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRecord"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvLikeSub">

        <TextView
            android:id="@+id/tvRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:textSize="@dimen/text_size_title"
            android:layout_marginStart="@dimen/padding"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvRecord" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@mipmap/icon_enter"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/mcvHead"
        app:layout_constraintBottom_toBottomOf="@id/mcvHead"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>