<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".activity.CoverActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:src="@mipmap/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="@dimen/cover_width"
            android:layout_height="@dimen/cover_height"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:maxLines="1"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mcvCover"
        app:layout_constraintTop_toTopOf="@+id/mcvCover" />


    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorTextHint"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/red"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvState" />

    <TextView
        android:id="@+id/tvType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        style="@style/TextViewTag"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvChapter" />

    <TextView
        android:id="@+id/tvType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        style="@style/TextViewTag"
        app:layout_constraintStart_toEndOf="@id/tvType1"
        app:layout_constraintTop_toTopOf="@id/tvType1" />

    <TextView
        android:id="@+id/tvType3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        style="@style/TextViewTag"
        app:layout_constraintStart_toEndOf="@id/tvType2"
        app:layout_constraintTop_toTopOf="@id/tvType1" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlOther"
        android:layout_width="160dp"
        app:tabMode="fixed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mcvCover"  >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiBrief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brief"/>
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/tvBrief"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/padding"
        android:lineSpacingExtra="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlOther" />

    <GridView
        android:id="@+id/gvTag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:numColumns="3"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlOther"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/fabLike"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:src="@mipmap/icon_like_stroke"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/red" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:src="@mipmap/icon_read"
        android:textSize="16sp"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/mcvCover"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>